--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1648,6 +1648,15 @@
     <String id="9035">Latitude</String>
     <String id="9036">Longitude</String>
     <String id="9037">Altitude</String>
+    <String id="9038">Location</String>
+    <!-- Location -->
+    <String id="9093">N</String>
+    <String id="9094">S</String>
+    <String id="9095">W</String>
+    <String id="9096">E</String>
+    <String id="9097">Sea level</String>
+    <String id="9098">Sea level {0} metres</String>
+    <String id="9099">Below sea level {0} metres</String>
     <!-- EXIF -->
     <String id="9100" prefix="My ">MiniDisplay</String>
     <String id="9101">Plugin is not configured.</String>
