MP1-4986: Minor bug fixes and improvements. Add #pictures.filename and #pictures.path properties.

--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -2083,6 +2083,10 @@
     <String id="103011" prefix="My ">TV/Crop settings</String>
     <String id="103012">TV tuning details</String>
     <String id="104711" prefix="My ">Wikipedia</String>
+    <String id="105000">Alarm</String>
+    <String id="105001">Alarm - Details</String>
+    <String id="105002">Alarm - Time to sleep</String>
+    <String id="105900" prefix="My ">Announcements</String>
     <String id="106666">Power Scheduler Waiting</String>
     <String id="107700" prefix="My ">TV/Teletext</String>
     <String id="107701" prefix="My ">TV/Teletext</String>
