MP1-4986: Add Picture details window caption (RU)

--- a/mediaportal/MediaPortal.Base/language/strings_ru.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_ru.xml
@@ -2074,6 +2074,7 @@
 		<String id="103011" prefix="Моё ">ТВ/Настройка обрезки</String>
 		<String id="103012">Подробности ТВ канала</String>
 		<String id="104711" prefix="Моя ">Википедия</String>
+		<String id="105000">Метаданные изображения</String>
 		<String id="106666">Диспетчер управления электропитанием ожидает</String>
 		<String id="107700" prefix="Моё ">ТВ/Телетекст</String>
 		<String id="107701" prefix="Моё ">ТВ/Телетекст</String>
