MP1-4986: Erroneous language data deleted (UK)

--- a/mediaportal/MediaPortal.Base/language/strings_uk.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_uk.xml
@@ -2026,10 +2026,7 @@
     <String id="103011" prefix="Моє ">Телебачення/Налаштування обрізання</String>
     <String id="103012">Подробиці сканування телебачення</String>
     <String id="104711" prefix="Моя ">Вікіпедія</String>
-    <String id="105000">Будильник</String>
-    <String id="105001">Будильник - Подробиці</String>
-    <String id="105002">Будильник - Час спати</String>
-    <String id="105900" prefix="Мої ">Анонси</String>
+    <String id="105000">Метадані зображення</String>
     <String id="106666">Очікування планового вимкнення</String>
     <String id="107700" prefix="Моє ">Телебачення/Телетекст</String>
     <String id="107701" prefix="Моє ">Телебачення/Телетекст</String>
