MP1-4986: Add Metadata

--- a/mediaportal/MediaPortal.Base/language/strings_en.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_en.xml
@@ -1366,6 +1366,7 @@
     <String id="2167">Keyword</String>
     <String id="2168">Update Exif</String>
     <String id="2169">Go to folder</String>
+    <String id="2170">Metadata</String>
     <String id="2200" prefix="My ">Explorer</String>
     <String id="2201">Select source</String>
     <String id="2202">Select destination</String>
