--- a/mediaportal/MediaPortal.Base/language/strings_ru.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_ru.xml
@@ -1356,6 +1356,7 @@
     <String id="2167">Ключевое слово</String>
     <String id="2168">Обновить Exif</String>
     <String id="2169">Перейти к папке</String>
+    <String id="2170">Метаданные</String>
     <String id="2200" prefix="Мой ">Проводник</String>
     <String id="2201">Выберите источник</String>
     <String id="2202">Выберите назначение</String>
