MP1-4986: Fix for Altitude in Metadata view, Cosmetic

--- a/mediaportal/MediaPortal.Base/language/strings_ru.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_ru.xml
@@ -573,7 +573,7 @@
     <String id="633">Дата/время начала</String>
     <String id="634">Дата/время окончания</String>
     <String id="635">времени</String>
-    <String id="636">дате</String>
+    <String id="636">Дата</String>
     <String id="637">Редактировать запись</String>
     <String id="638">Новая запись</String>
     <String id="639">Альбомы</String>
