--- a/TvEngine3/TVLibrary/Plugins/XmlTvImport/XmlTvSetup.resx
+++ b/TvEngine3/TVLibrary/Plugins/XmlTvImport/XmlTvSetup.resx
@@ -132,6 +132,15 @@
   <metadata name="ShowInGuide.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>355, 17</value>
+  </metadata>
+  <data name="cbRenameFileInZip.ToolTip" xml:space="preserve">
+    <value>If your archive contain more than one file, please use this tips :
+using "tvguide.lst"
+set xml filename provided in zip inside the "tvguide.lst"
+every update, the file will be imported to your EPG. </value>
+  </data>
   <metadata name="saveFileExport.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
