--- a/mediaportal/MediaPortal.Base/language/strings_de.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_de.xml
@@ -1334,10 +1334,10 @@
 		<String id="2145">Aktuelle Wiedergabeliste verwenden</String>
 		<String id="2146">Nicht genug Platz auf der CD</String>
 		<String id="2147">Nicht genug Platz auf der DVD</String>
-    	<String id="2162">Sender löschen</String>
-    	<String id="2163">Sender zu einer Gruppe hinzufügen</String>
-    	<String id="2164">Sender aus Gruppe entfernen</String>
-    	<String id="2166">Alle Aufnahmen in diesem Ordner löschen?</String>
+    		<String id="2162">Sender löschen</String>
+    		<String id="2163">Sender zu einer Gruppe hinzufügen</String>
+    		<String id="2164">Sender aus Gruppe entfernen</String>
+    		<String id="2166">Alle Aufnahmen in diesem Ordner löschen?</String>
 		<String id="2167">Schlüsselwort</String>
 		<String id="2168">EXIF aktualisieren</String>
 		<String id="2200" prefix="Mein ">Explorer</String>
@@ -1621,7 +1621,10 @@
 		<String id="9036">Längengrad</String>
 		<String id="9037">Höhe</String>
 		<String id="9038">Standort</String>
-		<!-- Location -->
+		<!-- Map URL -->
+		<String id="9090">https://maps.wikimedia.org/img/osm-intl,19,{0},{1},800x800.png</String>
+		<String id="9091">https://nominatim.openstreetmap.org/reverse?format=json&amp;lat={0}&amp;lon={1}&amp;zoom=18&amp;addressdetails=1&amp;accept-language={2}</String>
+    		<!-- Location -->
 		<String id="9093">N</String>
 		<String id="9094">S</String>
 		<String id="9095">W</String>
