--- a/mediaportal/MediaPortal.Base/language/strings_de.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_de.xml
@@ -716,7 +716,7 @@
 		<String id="783">Um 180° drehen</String>
 		<String id="784">Um 270° drehen</String>
 		<String id="789"></String>
-    <String id="790"></String>
+		<String id="790"></String>
 		<String id="791">Cover-Flow</String>
 		<String id="792">Ansichts-Menü</String>
 		<String id="798">niedrig</String>
@@ -1092,18 +1092,18 @@
 		<String id="1319">Geänderte Untertiteldatei speichern?</String>
 		<String id="1320">{0} als {1} &#10;</String>
 		<String id="1321">Automatische Auswahl des Decoders</String>
-    <String id="1322">Source-Filter erzwingen</String>
-    <String id="1323">Video-Codecs für .TS-Dateien</String>
-    <String id="1324">Audio-Auswahl überschreiben und Standard verwenden</String>
-    <String id="1325">Audio/Untertitel-Stream aus LAV-Splitter übernehmen</String>
+		<String id="1322">Source-Filter erzwingen</String>
+		<String id="1323">Video-Codecs für .TS-Dateien</String>
+		<String id="1324">Audio-Auswahl überschreiben und Standard verwenden</String>
+		<String id="1325">Audio/Untertitel-Stream aus LAV-Splitter übernehmen</String>
 		<String id="1331">Filmsammlung und Filme</String>
-    <String id="1332">Nur Filmsammlung</String>
-    <String id="1333">Diesen Film zu Filmsammlung hinzufügen</String>
-    <String id="1334">Diesen Film aus Filmsammlung löschen</String>
-    <String id="1335">Cover aktualisieren</String>
-    <String id="1337">Neue Filmsammlung anlegen</String>
-    <String id="1338">Diese Filmsammlung löschen</String>
-    <String id="1336">Bibliothek</String>
+		<String id="1332">Nur Filmsammlung</String>
+		<String id="1333">Diesen Film zu Filmsammlung hinzufügen</String>
+		<String id="1334">Diesen Film aus Filmsammlung löschen</String>
+		<String id="1335">Cover aktualisieren</String>
+		<String id="1337">Neue Filmsammlung anlegen</String>
+		<String id="1338">Diese Filmsammlung löschen</String>
+		<String id="1336">Bibliothek</String>
 		<String id="1440" prefix="Mein ">Videotext</String>
 		<String id="1441">Videotext</String>
 		<String id="1442">Textlauf horizontal</String>
@@ -1334,10 +1334,10 @@
 		<String id="2145">Aktuelle Wiedergabeliste verwenden</String>
 		<String id="2146">Nicht genug Platz auf der CD</String>
 		<String id="2147">Nicht genug Platz auf der DVD</String>
-    		<String id="2162">Sender löschen</String>
-    		<String id="2163">Sender zu einer Gruppe hinzufügen</String>
-    		<String id="2164">Sender aus Gruppe entfernen</String>
-    		<String id="2166">Alle Aufnahmen in diesem Ordner löschen?</String>
+		<String id="2162">Sender löschen</String>
+		<String id="2163">Sender zu einer Gruppe hinzufügen</String>
+		<String id="2164">Sender aus Gruppe entfernen</String>
+		<String id="2166">Alle Aufnahmen in diesem Ordner löschen?</String>
 		<String id="2167">Schlüsselwort</String>
 		<String id="2168">EXIF aktualisieren</String>
 		<String id="2200" prefix="Mein ">Explorer</String>
@@ -1621,10 +1621,13 @@
 		<String id="9036">Längengrad</String>
 		<String id="9037">Höhe</String>
 		<String id="9038">Standort</String>
+		<String id="9039">Adresse</String>
+		<String id="9040">Histogramm</String>
+		<String id="9041">Metadaten</String>
 		<!-- Map URL -->
 		<String id="9090">https://maps.wikimedia.org/img/osm-intl,19,{0},{1},800x800.png</String>
 		<String id="9091">https://nominatim.openstreetmap.org/reverse?format=json&amp;lat={0}&amp;lon={1}&amp;zoom=18&amp;addressdetails=1&amp;accept-language={2}</String>
-    		<!-- Location -->
+		<!-- Location -->
 		<String id="9093">N</String>
 		<String id="9094">S</String>
 		<String id="9095">W</String>
@@ -1743,9 +1746,9 @@
 		<String id="14016">Downloads</String>
 		<String id="14017">Bewertung</String>
 		<String id="14018">Aktualisierung installieren</String>
-        <String id="15001">Informationen zum Künstler</String>
-        <String id="15002">Informationen zum Album</String>
-        <String id="15003">Einfacher Modus</String>
+		<String id="15001">Informationen zum Künstler</String>
+		<String id="15002">Informationen zum Album</String>
+		<String id="15003">Einfacher Modus</String>
 		<String id="16001">Partymix</String>
 		<String id="19001" prefix="Mein ">Tetris</String>
 		<String id="19002">Neues Spiel</String>
