--- a/mediaportal/MediaPortal.Base/language/strings_fr.xml
+++ b/mediaportal/MediaPortal.Base/language/strings_fr.xml
@@ -1090,11 +1090,22 @@
     <String id="1317">Téléchargement de scripts internes ...</String>
     <String id="1318">Enregistrer des sous-titres</String>
     <String id="1319">Enregistrer la modification du fichier sous-titre ?</String>
-    <String id="1320">{0} comme {1} 
-</String>
+    <String id="1320">{0} comme {1} </String>
     <String id="1321">Réglage automatique des décodeurs</String>
     <String id="1322">Imposer le splitter de MP</String>
     <String id="1323">Codecs vidéo pour fichier .TS</String>
+    <String id="1324">Ecrase la selection audio et utilise celle par defaut</String>
+    <String id="1325">Utilise la selection audio/sous-titre du Splitter LAV</String>
+    <String id="1330">Seulement les groupes utilisateur</String>
+    <String id="1331">Collection de films</String>
+    <String id="1332">Seulement la collection de films</String>
+    <String id="1333">Ajoute un film à la collection</String>
+    <String id="1334">Supprime le film selectionné de la collection</String>
+    <String id="1335">Rafraîchir la couverture</String>
+    <String id="1336">Librairie</String>
+    <String id="1337">Ajouter une nouvelle collection</String>
+    <String id="1338">Supprimer la collection selectionnée</String>
+    <String id="1339">CinemaScope 2:35</String>
     <String id="1440" prefix="Mon ">Télétexte</String>
     <String id="1441">Télétexte</String>
     <String id="1442">Vitesse de défilement (horiz.)</String>
@@ -1143,6 +1154,9 @@
     <String id="1654">Unités de vitesse du vent</String>
     <String id="1655">intervalle de rafraîchissement</String>
     <String id="1656">mins</String>
+    <String id="1657">Montrer/cacher les enregistrements protégés</String> 
+    <String id="1658">Voulez-vous les voir ?</String>
+    <String id="1659">Voulez-vous les cacher ?</String>
     <String id="1900">Thème obsolète</String>
     <String id="1901">Votre thème actuellement sélectionné ({0}) est obsolète. Cela pourrait causer des problèmes lors de l'utilisation de MediaPortal. Pour cette raison, MediaPortal a temporairement appliqué le thème par défaut. Si toutefois vous souhaitez essayer d'utiliser le skin obsolète, appuyez sur le bouton "Ignorer et essayer", mais rappelez-vous: NE PAS déposer un rapport de bug en utilisant ce skin!
     (Pour ignorez cet avertissement soit attendre jusqu'à la fermeture automatiquement ou appuyez sur Retour/ESC de votre télécommande)</String>
@@ -1344,6 +1358,11 @@
     <String id="2149">Question</String>
     <String id="2160">Met à jour les infos Média dans le dossier sélectionné</String>
     <String id="2161">Annule le processus de mise à jour des infos Média</String>
+    <String id="2162">Supprimer la chaîne</String>
+    <String id="2163">Ajouter la chaîne à un groupe</String>
+    <String id="2164">Supprimer la chaîne de ce groupe</String>
+    <String id="2165">Voulez-vous supprimer cette chaîne du serveur télé ?</String>
+    <String id="2166">Supprimer tous les enregistrements de ce dossier ?</String>
     <String id="2200" prefix="Mon ">Explorateur</String>
     <String id="2201">Sélectionner une source</String>
     <String id="2202">Sélectionner une destination</String>
@@ -1370,6 +1389,8 @@
     <String id="2223">Poubelle</String>
     <String id="2224">Le répertoire existe !</String>
     <String id="2225">Répertoire créé</String>
+    <String id="2498">Cacher les films vus</String>
+    <String id="2499">Montrer les films vus</String>
     <String id="2500">Aucun critère de recherche saisi !</String>
     <String id="2501">Entrez un critère de recherche valide!</String>
     <String id="2502">Selectionnez votre Wikipedia local : </String>
@@ -1707,6 +1728,9 @@
     <String id="14016">Téléchargement</String>
     <String id="14017">Classement</String>
     <String id="14018">Installer Mise à jour</String>
+    <String id="15001">Informations sur l'artiste</String>
+    <String id="15002">Informations sur l'album</String>
+    <String id="15003">Simple joué maintenant</String>
     <String id="16001">Au hasard</String>
     <String id="19001" prefix="Mon ">Tetris</String>
     <String id="19002">Nouvelle partie</String>
@@ -2397,5 +2421,9 @@
     <String id="350036">MultiShortcut3</String>
     <String id="350037">MovingPictures</String>
     <String id="350038">HTPCinfo</String>
+    <String id="350039">Emulators2</String>
+    <String id="350040">MPsteam</String>
+    <String id="350041">Récuperer la photo et les details de l'acteur</String>
+    <String id="350042">Zap Key Timeout</String>
   </Section>
 </Language>
